# telecodex

./: .env.example  README.md  codex_telegram_bot.db-shm  pyproject.toml
src/codex_telegram_bot/: bot.py  codex_runner.py  config.py  logging_utils.py  main.py  models.py  rate_limiter.py  session_store.py  telegram_formatting.py  voice.py
src/codex_telegram_bot/flows/: execution.py  navigation.py
src/codex_telegram_bot/handlers/: callbacks.py  commands.py  errors.py  messages.py
src/codex_telegram_bot/services/: observability.py  projects.py
src/codex_telegram_bot/telegram/: inputs.py
src/codex_telegram_bot/telegram/ui/: keyboards.py  responder.py  texts.py
tests/: test_bot_helpers.py  test_codex_runner.py  test_config.py  test_message_inputs.py  test_observability.py  test_observability_service.py  test_projects_service.py  test_session_store.py  test_telegram_formatting.py  test_telegram_ui.py  test_voice.py
